deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: keycloak
---
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: keycloak
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  serviceName: "keycloak"
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: keycloak
        image: agileliteracy/keycloak:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: sql
          mountPath: /opt/jboss/keycloak/standalone/data/
  volumeClaimTemplates:
  - metadata:
      name: sql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  rules:
  - host: login.agileliteracy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
